   Reported by Ryan Daum.
 - Fixed bug with the relative links of the Web representation of the "Bookmarks" resource in the book tutorial. Reported by Sean Landis.
 - Fixed potential bug when checking "modification date" condition on a null variant. 
 - Fixed bug with db4o configuration in the book tutorial. Reported by Sean Landis.
 
[API changes]
 - Added MediaType.TEXT_CALENDAR constant for iCalendar events. Suggested by Aron Roberts.
 - Added default constructor to NRE's HttpServerHelper and a setServer() method to
   NRE's ServerHelper. Suggested by Brandon Lonac.

[Enhancements] 
 - Fixed Spring plugin descriptor for Eclipse.
 - Upgraded Velocity to version 1.5.
 - Added Apache Commons Lang library, dependency for Velocity 1.5.
 - Completed missing Javadocs for Series class. Reported by Jonathan Hall.

1.0 RC5 (2007-03-09)
[Bugs fixed]
 - Added missing dependency on Apache Commons IO for the Commons FileUpload library. Reported by Thierry Boileau.
 - Fixed unconformity with pre-conditions test when the resource has no representation and the client sends "if-match:*" header.
 - TunnelService wasn't removing the preference parameters from the query after usage. Reported by Valdis Rigdon.
 - Fixed potential NPE in Router.detach() method. Reported by Alex Combs.
 - Stop the applications attached to the default virtual host when stopping the component. Reported by Alex Combs.
 - Fixed ServerServlet adapter to make it start and stop the application with the Servlet lifecycle. Previously the
   application was started upon the first request and never stopped.
 - Fixed bug with the order of the representations provided by a Directory (TEXT/URI-LIST and TEXT/HTML) as IE does 
   not send HTML preference in the Accept headers.
 - Send the Vary header only to none-MSIE user agents as MSIE seems to support badly this header. Reported by Heinrich Klobuczek.
 - Enhanced but non completely fixed support of long URIs (due to regexp limitations). Reported by Ivan Gorgiev.