@@ -12,11 +12,13 @@ Changes log
  - Fixed bug with the relative links of the Web representation of the "Bookmarks" resource in the book tutorial. Reported by Sean Landis.
  - Fixed potential bug when checking "modification date" condition on a null variant. 
  - Fixed bug with db4o configuration in the book tutorial. Reported by Sean Landis.
- 
+  
 [API changes]
  - Added MediaType.TEXT_CALENDAR constant for iCalendar events. Suggested by Aron Roberts.
  - Added default constructor to NRE's HttpServerHelper and a setServer() method to
    NRE's ServerHelper. Suggested by Brandon Lonac.
+ - Renamed internal NRE's HttpCall.setProtocol() to setVersion().
+ - Added Parameter.setName() method.
 
 [Enhancements] 
  - Fixed Spring plugin descriptor for Eclipse.
